使用反射实现一个Java Bean到Map的转换器