@@ -1,9 +1,8 @@
 package com.github.hcsp.reflection;
 
 import org.apache.commons.beanutils.BeanUtils;
-import org.apache.commons.beanutils.PropertyUtils;
 
-import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -17,13 +16,43 @@ public class MapBeanConverter {
     //  2. 通过反射获得它包含的所有名为getXXX/isXXX，且无参数的方法（即getter方法）
     //  3. 通过反射调用这些方法并将获得的值存储到Map中返回
     public static Map<String, Object> beanToMap(Object bean) {
-        Map<String, Object> map;
+// 方法一：
+//        Map<String, Object> map;
+//        try {
+//            map = PropertyUtils.describe(bean);
+//        } catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
+//            throw new RuntimeException(e);
+//        }
+//        return map;
+
+// 方法二：
         try {
-            map = PropertyUtils.describe(bean);
-        } catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
+            if (bean == null) {
+                throw new IllegalAccessException("No bean");
+            }
+            Map<String, Object> map = new HashMap<>();
+            Method[] methods = bean.getClass().getMethods();
+            for (Method method : methods) {
+                String name = method.getName();
+                if (isDesiredMethod(method, name)) {
+                    String key = getStringName(name);
+                    map.put(key, method.invoke(bean));
+                }
+            }
+            return map;
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
-        return map;
+    }
+
+    private static String getStringName(String name) {
+        String key = name.contains("get") ? name.substring(3) : name.substring(2);
+        key = key.substring(0, 1).toLowerCase() + key.substring(1);
+        return key;
+    }
+
+    private static boolean isDesiredMethod(Method method, String name) {
+        return (name.contains("get") && method.getParameterTypes().length == 0) || (name.contains("is") && !name.contains("isolate"));
     }
 
     // 传入一个遵守Java Bean约定的Class和一个Map，生成一个该对象的实例
@@ -36,7 +65,7 @@ public class MapBeanConverter {
     public static <T> T mapToBean(Class<T> klass, Map<String, Object> map) {
         T bean;
         try {
-            bean = klass.newInstance();
+            bean = klass.getConstructor().newInstance();
             BeanUtils.populate(bean, map);
         } catch (Exception e) {
             throw new RuntimeException(e);
